# Meshimator

./: .gitignore  CMakeLists.txt  README.md
include/: simplify.hh
include/utils/: heap.hh  symmat.hh  triangle.hh  vector3.hh  vector3.hxx  vector4.hh  vector4.hxx  vertex.hh  vertexpair.hh
src/: CMakeLists.txt  main.cc  simplify.cc
src/utils/: CMakeLists.txt  heap.cc  symmat.cc  triangle.cc  vector3.cc  vector4.cc  vertex.cc  vertexpair.cc
